# Trick.Cpp.Library.MessageBus

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/Trick/: Envelope.h  MessageBus.h  Reference.h
include/Trick/Helpers/: Crate.h  Label.h  MessageId.h  Partition.h
include/Trick/Helpers/Concepts/: Container.h  IsContainer.h  IsNotContainer.h
scripts/cmake/: CompilerWarnings.cmake  DownloadCatch2Test.cmake  DownloadGoogleTest.cmake  PreventInSourceBuilds.cmake  PrintSystemToolsInformation.cmake  StandardProjectSettings.cmake
source/: CMakeLists.txt  main.cpp
source/MessageBus/: MessageBus.cpp
source/Trick/: CMakeLists.txt
tests/: CMakeLists.txt  FooTest.cpp
tests/Helpers/: CMakeLists.txt
tests/Helpers/Concepts/: CMakeLists.txt  IsContainer.CompileTest.cpp  IsNotContainer.CompileTest.cpp
tests/MessageBus/: CMakeLists.txt  MessageBusUT.cpp  MessageBusUT.h
tests/Test.Helpers/Messages/: TestMessage1.h
tests/Tests.Helpers/Messages/: TestMessage1.h  TestMessage2.h
tests/Trick/: CMakeLists.txt  Envelope.CompileTest.cpp  Envelope.Test.cpp  MessageBus.Test.cpp  Reference.Test.cpp
